fix initial install error

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <div class='modal pad4 fill-white keyline-all round' id='settings'>
-        <a href='#' class='pin-right icon close pad1 row1' id='close'></a>
+        <a href='#' class='pin-right icon close pad1 row1 quiet' id='close'></a>
         <h3 class='space-bottom2'>Settings</h3>
         <form id='form-settings'>
             <fieldset>
@@ -53,15 +53,15 @@
             </span>
         </form>
     </div>
-    <a href='#' id='show-settings' class='icon sprocket pin-right pad2 row2'></a>
-    <div class='vingette fancy shadow'>
-        <div class='info shadow'>
-            <h1 class='fancy space-bottom1' id='time'></h1>
-            <h2 id='date'></h2>
+    <a href='#' id='show-settings' class='icon sprocket pin-right pad2 row2 quiet'></a>
+    <div class='vingette fancy'>
+        <div class='info shadow color'>
+            <h1 class='fancy space-bottom1 shadow3' id='time'></h1>
+            <h2 class='shadow2' id='date'></h2>
         </div>
-        <div class='pin-bottom center pad4y dark pad4'>
+        <div class='pin-bottom center pad4y dark pad4 color'>
             <ul id='weather' class='pill pad4y'></ul>
-            <h3 id='location' class='margin4 col4'></h3>
+            <h3 id='location' class='shadow1 margin4 col4'></h3>
         </div>
     </div>
     <div id='map'></div>
