--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <div class='modal pad4 fill-white keyline-all round' id='settings'>
+    <!-- <div class='modal pad4 fill-white keyline-all round' id='settings'>
         <a href='#' class='pin-right icon close pad1 row1 quiet' id='close'></a>
         <h3 class='space-bottom2'>Settings</h3>
         <form id='form-settings'>
@@ -44,7 +44,7 @@
                 </label>
                 <input type='text' value='' class='col6' name='custom-mapid' id='custom-mapid' disabled placeholder="Enable 'Custom' to edit" />
             </fieldset>
-            <!-- <fieldset>
+            <fieldset>
                 <label>Units</label>
                 <div id='units' class='radio-pill pill clearfix col12'>
                     <input type='radio' name='units' value='imperial' id='imperial' checked>
@@ -53,7 +53,7 @@
                     <label for='metric' class='col3 button icon check'>C&#xb0;</label>
                 </div>
             </fieldset>
-            <hr> -->
+            <hr>
             <input type='submit' class='fl' value='Save Changes' name='' id='save' disabled />
             <span class='fr micro quiet pad1y icon mail'>
                 <a href='https://chrome.google.com/webstore/detail/maptab/dmabflbokojjfjicmbjjfnmodihciemo' class='quiet space-right1' target='_blank'>Share</a>
@@ -71,10 +71,11 @@
             <ul id='weather' class='shadow1 pill pad4y'></ul>
             <h3 id='location' class='shadow3 margin4 col4'></h3>
         </div>
-    </div>
-    <div id='map'></div>
+    </div> -->
+    <!-- <div id='map'></div> -->
+    <div id='app'></div>
 </body>
 
-<script src='assets/site.js'></script>
+<script src='assets/bundle.js'></script>
 
 </html>
