better error handling between versions

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
                     <label for='user-loc' class='col4 button icon check'>User location</label>
                     <input type='radio' name='loc' class='stroked' value='last-pos' id='last-pos'>
                     <label for='last-pos' class='col4 button icon check'>Last Position</label>
-                    <input type='radio' name='loc' value='random' id='random'>
-                    <label for='random' class='col4 button icon check' checked>Random</label>
+                    <input type='radio' name='loc' value='random' id='random' checked>
+                    <label for='random' class='col4 button icon check'>Random</label>
                 </div>
             </fieldset>
             <fieldset>
