Add a globe component to the bottom-left hand corner of the screen showing the current map location.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   <link rel='stylesheet' href='assets/css/base.css' />
   <link rel='stylesheet' href='assets/css/mapbox.css' />
   <link rel='stylesheet' href='assets/css/site.css'>
+  <script type='text/javascript' src='assets/js/d3.v3.min.js'></script>
+  <script type='text/javascript' src='assets/js/topojson.v1.min.js'></script>
+  <script type='text/javascript' src='assets/js/planetaryjs.min.js'></script>
 </head>
 
 <body>
